[gd_scene load_steps=36 format=3 uid="uid://c5e2pq22hfpa0"]

[ext_resource type="Script" path="res://script/enemy.gd" id="1_01q06"]
[ext_resource type="Texture2D" uid="uid://c5mbl0a0y7qj1" path="res://assets/textures/Main Characters/Mask Dude/Fall (32x32).png" id="1_4fwjy"]
[ext_resource type="Texture2D" uid="uid://cdvhi18spyme7" path="res://assets/textures/Main Characters/Mask Dude/Idle (32x32).png" id="1_mbefm"]
[ext_resource type="Texture2D" uid="uid://ct7wjii67u7ix" path="res://assets/textures/Main Characters/Mask Dude/Run (32x32).png" id="2_43kr1"]
[ext_resource type="Texture2D" uid="uid://druhlky45yq37" path="res://assets/textures/Main Characters/Mask Dude/Jump (32x32).png" id="3_vxydf"]

[sub_resource type="AtlasTexture" id="AtlasTexture_ao6s6"]
atlas = ExtResource("1_4fwjy")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_i3skt"]
atlas = ExtResource("1_mbefm")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_b3b75"]
atlas = ExtResource("1_mbefm")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_058tl"]
atlas = ExtResource("1_mbefm")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_on7jy"]
atlas = ExtResource("1_mbefm")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_txres"]
atlas = ExtResource("1_mbefm")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2d40v"]
atlas = ExtResource("1_mbefm")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_k31pj"]
atlas = ExtResource("1_mbefm")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8qx65"]
atlas = ExtResource("1_mbefm")
region = Rect2(224, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ofu4o"]
atlas = ExtResource("1_mbefm")
region = Rect2(256, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_48emc"]
atlas = ExtResource("1_mbefm")
region = Rect2(288, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_i8b50"]
atlas = ExtResource("1_mbefm")
region = Rect2(320, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7tqg1"]
atlas = ExtResource("3_vxydf")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hvg3u"]
atlas = ExtResource("2_43kr1")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_t7boe"]
atlas = ExtResource("2_43kr1")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pkalo"]
atlas = ExtResource("2_43kr1")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_r8yn3"]
atlas = ExtResource("2_43kr1")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_so4w6"]
atlas = ExtResource("2_43kr1")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6yhsg"]
atlas = ExtResource("2_43kr1")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_llewe"]
atlas = ExtResource("2_43kr1")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ypx7h"]
atlas = ExtResource("2_43kr1")
region = Rect2(224, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7bqel"]
atlas = ExtResource("2_43kr1")
region = Rect2(256, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2yu53"]
atlas = ExtResource("2_43kr1")
region = Rect2(288, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ipn13"]
atlas = ExtResource("2_43kr1")
region = Rect2(320, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_tfpty"]
atlas = ExtResource("2_43kr1")
region = Rect2(352, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_bwi8p"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ao6s6")
}],
"loop": true,
"name": &"fall",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_i3skt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b3b75")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_058tl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_on7jy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_txres")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2d40v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k31pj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8qx65")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ofu4o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_48emc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i8b50")
}],
"loop": true,
"name": &"idle",
"speed": 20.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7tqg1")
}],
"loop": true,
"name": &"jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hvg3u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t7boe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pkalo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r8yn3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_so4w6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6yhsg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_llewe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ypx7h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7bqel")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2yu53")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ipn13")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tfpty")
}],
"loop": true,
"name": &"run",
"speed": 15.0
}]

[sub_resource type="SegmentShape2D" id="SegmentShape2D_kyelu"]
a = Vector2(2.08165e-12, -6)
b = Vector2(2.08165e-12, 16)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_tpbut"]
a = Vector2(2.08165e-12, 2.08165e-12)
b = Vector2(2.08165e-12, 1)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_wpat3"]
height = 22.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_w7mfg"]
size = Vector2(22, 23)

[node name="Enemy" type="CharacterBody2D"]
collision_layer = 4
script = ExtResource("1_01q06")
metadata/_edit_group_ = true

[node name="Sprite" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_bwi8p")
animation = &"run"
frame_progress = 0.990195

[node name="WallDetector" type="ShapeCast2D" parent="."]
position = Vector2(13, 2.08165e-12)
shape = SubResource("SegmentShape2D_kyelu")
target_position = Vector2(2.08165e-12, 2.08165e-12)

[node name="EdgeDetector" type="ShapeCast2D" parent="."]
position = Vector2(13, 17)
shape = SubResource("SegmentShape2D_tpbut")
target_position = Vector2(2.08165e-12, 2.08165e-12)

[node name="Hitbox" type="CollisionShape2D" parent="."]
position = Vector2(0, 5)
shape = SubResource("CapsuleShape2D_wpat3")

[node name="KillArea" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 2

[node name="Hitbox" type="CollisionShape2D" parent="KillArea"]
position = Vector2(0, 4.5)
shape = SubResource("RectangleShape2D_w7mfg")

[node name="VisibleOnScreenEnabler2D" type="VisibleOnScreenEnabler2D" parent="."]
position = Vector2(1.5, 1.5)
scale = Vector2(1.85, 1.75)
